[tool.poetry]
name = "soldierstats"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
matplotlib = "^3.7.2"
scipy = "^1.11.4"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
